--- a/ArtGallery.Services.Api/ArtGallery.Services.Api.csproj
+++ b/ArtGallery.Services.Api/ArtGallery.Services.Api.csproj
@@ -13,6 +13,7 @@
     </PackageReference>
     <PackageReference Include="RESTFulSense" Version="2.4.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
+    <PackageReference Include="Xeption" Version="1.7.0" />
   </ItemGroup>
 
 </Project>
