--- a/ArtGallery.Services.Api.Tests.Acceptance/ArtGallery.Services.Api.Tests.Acceptance.csproj
+++ b/ArtGallery.Services.Api.Tests.Acceptance/ArtGallery.Services.Api.Tests.Acceptance.csproj
@@ -10,7 +10,7 @@
   <ItemGroup>
     <PackageReference Include="FluentAssertions" Version="6.5.1" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="6.0.2" />
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.1.0" />
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.2.0-preview-20220131-20" />
     <PackageReference Include="RESTFulSense" Version="2.4.0" />
     <PackageReference Include="xunit" Version="2.4.2-pre.12" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.3">
