--- a/ArtGallery.Services.Infrastructure.Build/ArtGallery.Services.Infrastructure.Build.csproj
+++ b/ArtGallery.Services.Infrastructure.Build/ArtGallery.Services.Infrastructure.Build.csproj
@@ -7,6 +7,7 @@
 
   <ItemGroup>
     <PackageReference Include="ADotNet" Version="2.0.5" />
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.2.0-preview-20220131-20" />
   </ItemGroup>
 
 </Project>
