--- a/ArtGallery.Services.Tests.Unit/ArtGallery.Services.Tests.Unit.csproj
+++ b/ArtGallery.Services.Tests.Unit/ArtGallery.Services.Tests.Unit.csproj
@@ -8,7 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="DeepCloner" Version="0.10.3" />
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.1.0" />
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.2.0-preview-20220131-20" />
     <PackageReference Include="Moq" Version="4.16.1" />
     <PackageReference Include="Tynamix.ObjectFiller" Version="1.5.7" />
     <PackageReference Include="xunit" Version="2.4.2-pre.12" />
